--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dom": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
